# LabHero

./: .gitignore  CITATION.cff  LabHero.icns  LabHero.py  README.md  main.py  pygbag.ini  requirements.txt
scipoptsuite-9.2.0/: CMakeLists.txt
scipoptsuite-9.2.0/gcg/src/: githash.c
scipoptsuite-9.2.0/papilo/settings/: scip_settings.set
scipoptsuite-9.2.0/papilo/src/papilo/: Config.hpp
scipoptsuite-9.2.0/scip/src/scip/: githash.c
scipoptsuite-9.2.0/soplex/src/soplex/: git_hash.cpp
scipoptsuite-9.2.0/ug/: CMakeLists.txt  Makefile
scipoptsuite-9.2.0/ug/check/: check_fscip.sh  check_parascip.sh
scipoptsuite-9.2.0/ug/doc/: builddoc.sh  ug.dxy  xternal.cpp
scipoptsuite-9.2.0/ug/src/ug/: githash.cpp  paraCalculationState.h  paraComm.h  paraCommCPP11.cpp  paraCommCPP11.h  paraCommMpi.cpp  paraCommMpi.h  paraCommPth.cpp  paraCommPth.h  paraDef.h  paraDeterministicTimer.h  paraDiffSubproblem.h  paraInitialStat.h  paraInitiator.h  paraInstance.h  paraIsendRequest.h  paraLoadCoordinator.cpp  paraLoadCoordinator.h  paraLoadCoordinatorTerminationState.h  paraParamSet.cpp  paraParamSet.h  paraParamSetMpi.cpp  paraParamSetMpi.h  paraParamSetTh.h  paraPthCondVar.h  paraPthLock.h  paraRacingRampUpParamSet.h  paraSolution.h  paraSolver.cpp  paraSolver.h  paraSolverPool.h  paraSolverState.h  paraSolverTerminationState.h  paraSysTimer.cpp  paraSysTimer.h  paraTagDef.h  paraTask.h  paraTimeLimitMonitorTh.h  paraTimer.h  paraTimerMpi.cpp  (+4 more)
scipoptsuite-9.2.0/ug/src/ug_bb/: bbParaCalculationState.h  bbParaCalculationStateMpi.cpp  bbParaCalculationStateMpi.h  bbParaCalculationStateTh.cpp  bbParaCalculationStateTh.h  bbParaComm.h  bbParaCommCPP11.cpp  bbParaCommCPP11.h  bbParaCommMpi.cpp  bbParaCommMpi.h  bbParaCommPth.cpp  bbParaCommPth.h  bbParaDiffSubproblem.h  bbParaInitiator.h  bbParaInstance.h  bbParaLoadCoordinator.cpp  bbParaLoadCoordinator.h  bbParaLoadCoordinatorTerminationState.cpp  bbParaLoadCoordinatorTerminationState.h  bbParaNode.cpp  bbParaNode.h  bbParaNodeMpi.cpp  bbParaNodeMpi.h  bbParaNodePool.h  bbParaNodeTh.cpp  bbParaNodeTh.h  bbParaNodesMerger.cpp  bbParaNodesMerger.h  bbParaParamSet.cpp  bbParaParamSet.h  bbParaRacingRampUpParamSet.h  bbParaSolution.h  bbParaSolver.cpp  bbParaSolver.h  bbParaSolverPool.cpp  bbParaSolverPool.h  bbParaSolverState.h  bbParaSolverStateMpi.cpp  bbParaSolverStateMpi.h  bbParaSolverStateTh.cpp  (+8 more)
scipoptsuite-9.2.0/ug/src/ug_scip/: fscip.cpp  parascip.cpp  scipDefaultUserPlugins.cpp  scipDiffParamSet.cpp  scipDiffParamSet.h  scipDiffParamSetMpi.cpp  scipDiffParamSetMpi.h  scipDiffParamSetTh.cpp  scipDiffParamSetTh.h  scipParaComm.h  scipParaCommMpi.cpp  scipParaCommMpi.h  scipParaCommTh.cpp  scipParaCommTh.h  scipParaDeterministicTimer.h  scipParaDiffSubproblem.cpp  scipParaDiffSubproblem.h  scipParaDiffSubproblemMpi.cpp  scipParaDiffSubproblemMpi.h  scipParaDiffSubproblemTh.h  scipParaInitialStat.cpp  scipParaInitialStat.h  scipParaInitialStatMpi.cpp  scipParaInitialStatMpi.h  scipParaInitialStatTh.cpp  scipParaInitialStatTh.h  scipParaInitiator.cpp  scipParaInitiator.h  scipParaInstance.cpp  scipParaInstance.h  scipParaInstanceMpi.cpp  scipParaInstanceMpi.h  scipParaInstanceTh.cpp  scipParaInstanceTh.h  scipParaInterruptMsgMonitor.cpp  scipParaInterruptMsgMonitor.h  scipParaLoadCoordinator.cpp  scipParaLoadCoordinator.h  scipParaObjBranchRule.cpp  scipParaObjBranchRule.h  (+29 more)
scipoptsuite-9.2.0/ug/ug_scip_applications/MISDP/: Makefile
scipoptsuite-9.2.0/ug/ug_scip_applications/MISDP/check/: check_fscip.sh  check_parascip.sh
scipoptsuite-9.2.0/ug/ug_scip_applications/MISDP/src/: misdp_plugins.cpp
scipoptsuite-9.2.0/ug/ug_scip_applications/STP/: Makefile
scipoptsuite-9.2.0/ug/ug_scip_applications/STP/check/: check_cluster_fscip.sh  check_fscip.sh  (+2 more)
scipoptsuite-9.2.0/zimpl/: CHANGELOG  CMakeLists.txt  Makefile  Makefile.nmake
scipoptsuite-9.2.0/zimpl/check/: bool.zpl  check.sh  condit.zpl  define.zpl  expr.zpl  minlp.zpl  param.zpl  presol.zpl  qubo.lp.ref  qubo.q.ref  qubo.q0cp.ref  qubo.q0cp.tbl.ref  qubo.zpl  read.zpl  set.zpl  sos.zpl  subto.zpl  var.zpl  vinst.zpl
scipoptsuite-9.2.0/zimpl/check/errors/: e401.err.ref  e401.zpl
scipoptsuite-9.2.0/zimpl/cmake/Modules/: FindPCRE.cmake
scipoptsuite-9.2.0/zimpl/make/: make.cygwin.x86.gnu.dbg  make.cygwin.x86.gnu.opt  make.cygwin.x86_64.gnu.dbg  make.cygwin.x86_64.gnu.opt  make.darwin.arm.gnu.dbg  make.darwin.ppc.gnu.dbg  make.darwin.ppc.gnu.opt  make.darwin.x86.gnu.dbg  make.darwin.x86.gnu.opt  make.darwin.x86.intel.dbg  make.darwin.x86.intel.opt  make.darwin.x86_64.gnu.dbg  make.darwin.x86_64.gnu.opt  make.freebsd.x86.gnu.dbg  make.freebsd.x86.gnu.opt  make.freebsd.x86_64.gnu.dbg  make.linux.x86.gnu.dbg  make.linux.x86.gnu.gcov  make.linux.x86.gnu.opt  make.linux.x86.gnu.opt-gccold  make.linux.x86.gnu.prf  make.linux.x86.gnu.valgrind  make.linux.x86.intel.dbg  make.linux.x86.intel.opt  make.linux.x86_64.clang.dbg  make.linux.x86_64.clang.opt  make.linux.x86_64.gnu.check  make.linux.x86_64.gnu.dbg  make.linux.x86_64.gnu.gcov  make.linux.x86_64.gnu.opt-gccold  make.linux.x86_64.gnu.prf  make.linux.x86_64.gnu.valgrind  make.linux.x86_64.intel.dbg  make.linux.x86_64.intel.opt  make.mingw.x86.gnu.dbg  make.mingw.x86.gnu.opt  make.mingw.x86.msvc.dbg  make.mingw.x86.msvc.opt  make.mingw.x86_64.msvc.dbg  make.mingw.x86_64.msvc.opt  (+12 more)
scipoptsuite-9.2.0/zimpl/src/: CMakeLists.txt
scipoptsuite-9.2.0/zimpl/src/zimpl/: attribute.h  blkmem.c  blkmem.h  bound.c  bound.h  code.c  code.h  conname.c  conname.h  define.c  define.h  elem.c  elem.h  entry.c  entry.h  gmpmisc.c  gmpmisc.h  hash.c  hash.h  heap.c  heap.h  idxset.c  idxset.h  inst.c  inst.h  iread.c  lint.h  list.c  list.h  load.c  local.c  local.h  metaio.c  metaio.h  mme.h  mmlparse2.c  mmlparse2.h  mmlparse2.y  mmlscan.c  mmlscan.l  (+56 more)
(+99 files in other folders)
